# easy-languages-anki

./: .gitignore  10_dl.py  20_segments_find.py  30_segments_clean.py  Makefile  README.md  dev.Dockerfile  docker-dev-build.sh  docker-dev-run.sh  pyproject.toml  segment.py
brain-brew/recipes/: anki_to_source.yaml  easy_languages_source_to_anki.yaml  easy_lanugages_anki_to_source.yaml  easy_polish_cloze_anki_to_source.yaml  easy_polish_cloze_source_to_anki.yaml  source_to_anki.yaml
brain-brew/src/data/: easy-polish-cloze.csv
brain-brew/src/headers/: easy-languages.yaml  header1.yaml
brain-brew/src/note_models/easy-languages/: easy-languages.yaml  listening.html  listening_browser.html
brain-brew/src/note_models/easy-polish-cloze/: Cloze.html  easy-polish-cloze.yaml  style.css
scripts/: 10_videodl.py  20_segments_find.py  40_segments_clean.py  50_segments_to_anki_cards.py  _30_segments_to_preview_videos.py  anki-import-media.bash  cards.py  ffmpeg-tag-frames.sh  find-phrases.bash  pipeline-multi.bash  pipeline.py  vocab-expander.py
src/anki/: parser.py
src/easy_languages_anki/: ankicards.py  config.py  editor.py  segment.py  segmentcleaner.py  segmentize.py  videodl.py
src/easy_languages_anki/pipeline/: 30_segments_to_preview_videos.py  50_segments_to_anki_cards.py  imagetotext.py  segment.py
src/vocab/: expander.py  vocab.py
video-pipeline/: 10_dl.py  20_segments_find.py  30_segments_clean.py  30_segments_to_videos.py  40_segments_clean.py  40_segments_make.py  50_segments_to_anki_cards.py  editor.py  segment.py
