[project]
name = "easy-languages-anki"
version = "0.1.0"
description = "easy-languages youtube channels to anki"
authors = [
    {name = "samm81", email = "samwmaynard@gmail.com"},
]
dependencies = [
    "numpy~=1.0",
    "opencv-python~=4.0",
    "pytesseract>=0.3.13",
    "scikit-image~=0.0",
    "pillow~=10.0",
    "brain-brew~=0.3",
    "youtube-dl @ git+https://github.com/ytdl-org/youtube-dl.git@c5098961b04ce83f4615f2a846c84f803b072639",
    "tqdm>=4.66.5",
    "spacy>=3.7.5",
    "pip>=24.2",
]
requires-python = ">=3.12,<3.13"
readme = "README.md"

[tool.pdm]
distribution = false

[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.7.0",
]

[tool.pyright]
typeCheckingMode = "standard"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
enableReachabilityAnalysis = true
