[project]
name = "easy-languages-anki"
version = "0.1.0"
description = "easy-languages youtube channels to anki"
authors = [
    {name = "samm81", email = "samwmaynard@gmail.com"},
]
dependencies = [
    "numpy~=1.0",
    "opencv-python~=4.0",
    "pytesseract>=0.3.13",
    "scikit-image~=0.0",
    "pillow~=10.0",
    "brain-brew~=0.3",
    "youtube-dl @ git+https://github.com/ytdl-org/youtube-dl.git@c5098961b04ce83f4615f2a846c84f803b072639",
    "tqdm>=4.66.5",
    "spacy>=3.7.5",
    "pip>=24.2",
]
requires-python = ">=3.12,<3.13"
readme = "README.md"

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "ruff>=0.14.0",
]

[tool.pyright]
typeCheckingMode = "standard"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
enableReachabilityAnalysis = true

[tool.ruff]
unsafe-fixes = true  # allow potentially behavior-changing auto-fixes

[tool.ruff.lint]
select = [
    "E", # Style errors (PEP8)
    "F", # Pyflakes (unused vars, imports, etc.)
    "I", # isort (import sorting)
    "B", # flake8-bugbear (bug-prone code)
    "UP", # pyupgrade (modernize syntax)
    "N", # pep8-naming (naming conventions)
    "SIM",# simplify (unnecessary constructs)
    "C4", # comprehensions (cleaner comprehensions)
    "PERF", # performance (avoid inefficient patterns)
    "PL", # pylint (selected useful pylint rules)
    "RUF", # Ruff-specific improvements
    "ERA", # eradicate
    "FAST", # fastapi
    "A", # flake8-builtins
]

